hphp/hack/test/typecheck/classname/new_trait.php.exp
File "new_trait.php", line 5, characters 22-24:
Foo is uninstantiable (Typing[4002])
File "new_trait.php", line 3, characters 7-9:
Declaration is here
